setup maven to java 17